tests/typechecking/valid/arithmetic_operations/simple_addition.ml
let x = 2 in
  let y = 6 in
    let z = x + y in ()