tests/typechecking/invalid/4-functions/unknown_variable.ml
let a = x + 1 in
  print_int (a)